tests/smt2/error/bad_core.smt2
(assert false)
(check-sat)
(assert false)
(get-unsat-core)